@@ -1,3 +1,8 @@
+2001-06-27  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* config/tc-arm.c (do_ldst): Use MVN to build simple inverted
+	constants.
+
 2000-06-20  Tom Rix <trix@redhat.com>
 
 	* config/tc-ppc.c (ppc_comm): Change default alignment to 4 bytes.
